k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel
  namespace: testing-laravel
  labels:
    app: laravel

spec:
  replicas: 2

  revisionHistoryLimit: 5

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  selector:
    matchLabels:
      app: laravel

  template:
    metadata:
      labels:
        app: laravel

    spec:

      imagePullSecrets:
      - name: harbor-secret

      containers:

      - name: laravel

        image: IMAGE_PLACEHOLDER

        imagePullPolicy: Always

        ports:
        - containerPort: 8000

        resources:

          requests:
            cpu: 250m
            memory: 256Mi

          limits:
            cpu: "1"
            memory: 1024Mi

        readinessProbe:
          httpGet:
            path: /
            port: 8000

          initialDelaySeconds: 20
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3

        livenessProbe:
          httpGet:
            path: /
            port: 8000

          initialDelaySeconds: 30
          periodSeconds: 15
          timeoutSeconds: 5
          failureThreshold: 3

        startupProbe:
          httpGet:
            path: /
            port: 8000

          failureThreshold: 30
          periodSeconds: 10
