k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: laravel-service
  namespace: testing-laravel

spec:

  type: ClusterIP

  selector:
    app: laravel

  ports:

  - name: http

    port: 80

    targetPort: 8000

    protocol: TCP
