k8s/ingress-dc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: laravel
  namespace: testing-laravel
spec:
  ingressClassName: nginx
  rules:
  - host: laravel.192.168.1.100.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: laravel-service
            port:
              number: 80
