k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: laravel
  namespace: testing-laravel

  annotations:

    nginx.ingress.kubernetes.io/proxy-body-size: "100m"

    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"

    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"

    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"

spec:

  ingressClassName: nginx

  rules:

  - host: laravel.test.cbncloud.local

    http:

      paths:

      - path: /

        pathType: Prefix

        backend:

          service:

            name: laravel-service

            port:

              number: 80
